# nixos

./: .conventional-commit.toml  .gitignore  .gitmodules  .sops.yaml  README.md  flake.nix  fzf  home.nix  install.sh  justfile  keys.nix  notes.md  readme.md  result  sync-host-key.sh  user_packages.nix
configurations/: zsh.nix
dotfiles/bash/: bashrc
dotfiles/git/: config  ignore
dotfiles/hypr/: active_wallpaper  hyprland.conf
dotfiles/nvim/: init.lua
dotfiles/nvim-old/: init.lua
dotfiles/tmux/: tmux.conf
dotfiles/waybar/: simple-config
dotfiles/zellij/: config.kdl
dotfiles/zsh/: zshrc
home-manager/archetype/: personal_user.nix
home-manager/modules/: de.nix  minecraft.nix  work.nix
home-manager/users/: ajlow.nix
hosts/hal9000/: configuration.nix
hosts/multivac/: hardware-configuration.nix
hosts/wsl/: configuration.nix
myflakes/bambam/: flake.nix
nixos/archetype/: server.nix
scripts/: conventional-commit  volume-down  volume-up
secrets/: README.md  common.yaml  microvac.yaml
system/: keys.nix
toolbox/: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
toolbox/apps/ng-tmux-session-manager/: Cargo.toml
toolbox/apps/ng-tmux-session-manager/src/: main.rs
toolbox/apps/repo-manager/: Cargo.toml
toolbox/apps/repo-manager/src/: cli.rs  main.rs
toolbox/apps/repo-manager/src/commands/: audit.rs  clone.rs  list.rs  mod.rs  remove.rs  switch.rs
toolbox/apps/repo-manager/src/commands/worktree/: create.rs  mod.rs  remove.rs
toolbox/apps/session-aware-cd/: Cargo.toml
toolbox/apps/session-aware-cd/src/: main.rs
toolbox/apps/tmux-session-manager/src/: main.rs
toolbox/crates/tmux-session-manager/: Cargo.toml
toolbox/crates/tmux-session-manager/src/: main.rs
toolbox/libs/session/: Cargo.toml
toolbox/libs/session/src/: lib.rs  manifest.rs
users/: ajlow.nix
workstation/: configuration.nix
(+274 files in other folders)
