[workspace]
resolver = "2"
members = ["apps/*", "libs/*"]

[workspace.metadata.crane]
name = "toolbox"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Alec Lowry"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
