[workspace]
resolver = "2"
members = ["apps/*", "libs/*"]

[workspace.metadata.crane]
name = "toolbox"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Alec Lowry"]

[workspace.dependencies]
session = { path = "libs/session" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "3", features = ["tracing"] }
dirs = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
